--- a/backend/static/css/library_detail.css
+++ b/backend/static/css/library_detail.css
@@ -28,11 +28,11 @@ width: 80%;
 justify-self: center;
 margin-top: 40px;
 overflow: auto;
-
+height: 400px;
 }
 
-.code{
-  border-radius: 30px;
+code{
+  border-radius: 10px;
 }
 
 .download_section{
@@ -147,18 +147,11 @@ position: relative;
 }
 
 
-
-
-
     pre {
-    height: 400px;
-    width: 100%;
     
+    width: 100%;
   position:relative;
-overflow: scroll;
   margin:5px 0;
- 
-  border-radius:10px;
 }
 
 .code_sample button{
@@ -172,9 +165,25 @@ overflow: scroll;
   border:ridge 1px #7b7b7c;
   border-radius:5px;
   text-shadow:#c4c4c4 0 0 2px;
+box-shadow: 3px 3px 3px rgba(128, 128, 128, 0.521);
+}
+::-webkit-scrollbar {
+  width: 10px;
 }
 
+::-webkit-scrollbar-thumb {
+  background: #00BBF9;
+  border-radius: 10px;
+  height: 2px;
+}
 
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+::-webkit-scrollbar-track{
+  width: 10px;
+}
 
 
 
