--- a/frontend/search-overlay/search_overlay.css
+++ b/frontend/search-overlay/search_overlay.css
@@ -1,13 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+.stubborn-overlay {
+    background-color: #fff;
+}
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-body{
-    font-family: 'Open Sans', sans-serif;
-}
 .so-main{
     background-color: #1E1E1E;
     padding: 3% 5%;
@@ -21,13 +15,14 @@ body{
     margin-bottom: 3rem;
 }
 .so-search{
-    color: #D9D9D9;
+    /* color: #D9D9D9; */
     width: 60%;
     height: 10px;
     border-radius: 6px;
     border: none;
     padding: 22px;
-    font-size: .8rem;
+    font-size: .9rem;
+    font-weight: bold;
 }
 .so-search-icon{
     position: absolute;
@@ -48,11 +43,14 @@ body{
     grid-gap: 1rem;
 }
 .so-codesamples{
-    background-color: #D9D9D9;
+    background-color: var(--primary-color);
     border-radius: 10px;
     padding: 2rem;
     text-align: center;
-    background: linear-gradient(140.6deg, #2BA5CE 34.46%, rgba(244, 252, 255, 0) 80%, rgba(101, 133, 143, 0.538004) 80%);
+}
+.so-codesamples svg {
+    stroke: #fff;
+    clip-path: #fff;
 }
 .so-codesamples p{
     color: #ffff;
