--- a/frontend/404-page/404-page.css
+++ b/frontend/404-page/404-page.css
@@ -1,27 +1,30 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+.nf-main {
+  display: grid;
+  place-content: center;
+  padding: 10px auto;
+}
+.img-404 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  /* bottom: 40.97%; */
+}
 
-        .img-404 {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            bottom: 40.97%;
-        }
-
-        .text-404{
-            text-align: center;
-            font-family: 'Poppins', sans-serif;
-            font-style: normal;
-            font-weight: 400;
-            font-size: 24px;
-            line-height: 32px;
-        }
-        .home-link-404{
-            font-style: normal;
-            font-weight: 400;
-            font-size: 24px;
-            line-height: 32px;
-        }
-        a{
-            text-decoration:none;
-            color: #00BBF9;
-        }
+.text-404 {
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 32px;
+}
+.home-link-404 {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 32px;
+}
+/* a {
+  text-decoration: none;
+  color: #00bbf9;
+} */
